--- a/Solution Items/Directory.Packages.props
+++ b/Solution Items/Directory.Packages.props
@@ -3,5 +3,6 @@
 		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageVersion Include="MediatR" Version="12.4.1" />
 	</ItemGroup>
 </Project>
