Application.Abstractions codes writed : Authentication, Behaviors (Logging, Validation), IUnitOfWork and more;

--- a/src/Application/SpendSmart.Application.Abstractions/SpendSmart.Application.Abstractions.csproj
+++ b/src/Application/SpendSmart.Application.Abstractions/SpendSmart.Application.Abstractions.csproj
@@ -6,7 +6,13 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" />
+    <PackageReference Include="MediatR" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Common\SpendSmart.Common.Abstractions\SpendSmart.Common.Abstractions.csproj" />
+    <ProjectReference Include="..\SpendSmart.Application.Contracts\SpendSmart.Application.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
