--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,5 +6,7 @@
     <PackageVersion Include="FluentValidation" Version="12.0.0-preview1" />
     <PackageVersion Include="MediatR" Version="12.4.1" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
+    <PackageVersion Include="TimeZoneConverter" Version="7.0.0" />
+    <PackageVersion Include="Ulid" Version="1.3.4" />
   </ItemGroup>
 </Project>
