--- a/src/SpendSmart.App/SpendSmart.App.csproj
+++ b/src/SpendSmart.App/SpendSmart.App.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <UserSecretsId>af709a11-764b-4450-976e-19acf8453bfa</UserSecretsId>
   </PropertyGroup>
 
