Refactor project structure and enhance documentation
Updated project file to include AssemblyName. Modified using directives in Program.cs for simplification. Added XML documentation comments in ApiBehaviorOptionsSetup and ApiServiceInstaller. Enhanced service installation methods to configure options properly. Included new using directive in MessagingServiceInstaller for transaction processing. Added InternalsVisibleTo attributes in AssemblyInfo for better modularization and testing.

--- a/src/Application/SpendSmart.Application.Queries.Processors/SpendSmart.Application.Queries.Processors.csproj
+++ b/src/Application/SpendSmart.Application.Queries.Processors/SpendSmart.Application.Queries.Processors.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
+	  <AssemblyName>SpendSmart.Application.Queries.Processors</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
